PACKAGE=ccglue
VERSION=0.1.0
AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

PKG_CHECK_MODULES(GLIB, glib-2.0)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_OUTPUT(Makefile src/Makefile 3rdparty/tclap-1.21/config/Makefile)

