bin_PROGRAMS = ccglue ccglue_tracer
ccglue_SOURCES = options.cpp cscoperdr.cpp sym_mgr.cpp digraph.cpp main.cpp c_glue.cpp  tag_file_writer.cpp misc_util.cpp debug.cpp memory_file.cpp
ccglue_tracer_SOURCES = tracer_options.cpp tracer.cpp digraph.cpp debug.cpp 
AM_CPPFLAGS = -I$(top_srcdir)/include/
